service fabric actor working, data lock matcher borrowed from v1

--- a/SFA.DAS.Payments/DataLockActor.Interfaces/DataLockActor.Interfaces.csproj
+++ b/SFA.DAS.Payments/DataLockActor.Interfaces/DataLockActor.Interfaces.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="3.1.283" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.Payments.Domain\SFA.DAS.Payments.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
