--- a/SFA.DAS.Payments/DataLockActor/DataLockActor.csproj
+++ b/SFA.DAS.Payments/DataLockActor/DataLockActor.csproj
@@ -13,10 +13,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="3.1.283" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataLockActor.Interfaces\DataLockActor.Interfaces.csproj" />
+    <ProjectReference Include="..\SFA.DAS.Payments.Application\SFA.DAS.Payments.Application.csproj" />
   </ItemGroup>
 
 </Project>
