--- a/SFA.DAS.Payments/SFA.DAS.Payments.PocClient/SFA.DAS.Payments.ServiceFabric.PocClient.csproj
+++ b/SFA.DAS.Payments/SFA.DAS.Payments.PocClient/SFA.DAS.Payments.ServiceFabric.PocClient.csproj
@@ -19,11 +19,15 @@
     <PackageReference Include="ESFA.DC.ILR.FundingService.ALB.FundingOutput.Model.Interface" Version="0.1.2-beta0001" />
     <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="3.1.283" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="NServiceBus.Azure.Transports.WindowsAzureStorageQueues" Version="8.0.0" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0" />
+    <PackageReference Include="NServiceBus.Persistence.AzureStorage" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataLockActor.Interfaces\DataLockActor.Interfaces.csproj" />
     <ProjectReference Include="..\SFA.DAS.Payments.Application\SFA.DAS.Payments.Application.csproj" />
+    <ProjectReference Include="..\SFA.DAS.Payments.DataLock.Messages\SFA.DAS.Payments.DataLock.Messages.csproj" />
     <ProjectReference Include="..\SFA.DAS.Payments.TestDataGenerator\SFA.DAS.Payments.TestDataGenerator.csproj" />
   </ItemGroup>
 
