--- a/SFA.DAS.Payments.Functions/SFA.DAS.Payments.Functions.Client.POC/App.config
+++ b/SFA.DAS.Payments.Functions/SFA.DAS.Payments.Functions.Client.POC/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="datalock" connectionString="Endpoint=sb://dasfunctionspoc.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=laMSAlfnglCR76GetNnGiHDr3CjTxqHE5SpVxL10CpA="/>
+    <add name="datalock" connectionString="Endpoint=sb://functionpoc.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/H2LldmBmiE1y0l20BRjMahLKAyMl1LM9VZImUHd79Q="/>
   </connectionStrings>
 </configuration>
