--- a/SFA.DAS.Payments.Functions/SFA.DAS.Payments.ChainedFunctions.POC/SFA.DAS.Payments.ChainedFunctions.POC.csproj
+++ b/SFA.DAS.Payments.Functions/SFA.DAS.Payments.ChainedFunctions.POC/SFA.DAS.Payments.ChainedFunctions.POC.csproj
@@ -7,6 +7,11 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.14" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\SFA.DAS.Payments\SFA.DAS.Payments.Application\SFA.DAS.Payments.Application.csproj" />
+    <ProjectReference Include="..\..\SFA.DAS.Payments\SFA.DAS.Payments.Domain\SFA.DAS.Payments.Domain.csproj" />
+    <ProjectReference Include="..\SFA.DAS.Payments.DurableFunctions.POC\SFA.DAS.Payments.DurableFunctions.POC.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
