--- a/SFA.DAS.Payments/SFA.DAS.Payments.TestDataGenerator/SFA.DAS.Payments.TestDataGenerator.csproj
+++ b/SFA.DAS.Payments/SFA.DAS.Payments.TestDataGenerator/SFA.DAS.Payments.TestDataGenerator.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="ESFA.DC.ILR.FundingService.ALB.FundingOutput.Model" Version="0.1.2-beta0001" />
     <PackageReference Include="ESFA.DC.ILR.FundingService.ALB.FundingOutput.Model.Interface" Version="0.1.2-beta0001" />
+    <PackageReference Include="FastMember" Version="1.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.0" />
   </ItemGroup>
