--- a/SFA.DAS.Payments.Functions/SFA.DAS.Payments.ChainedFunctions.Client.POC/App.config
+++ b/SFA.DAS.Payments.Functions/SFA.DAS.Payments.ChainedFunctions.Client.POC/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="datalock" connectionString="Endpoint=sb://functionpoc.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/H2LldmBmiE1y0l20BRjMahLKAyMl1LM9VZImUHd79Q="/>
+    <!--<add name="datalock" connectionString="Endpoint=sb://functionpoc.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/H2LldmBmiE1y0l20BRjMahLKAyMl1LM9VZImUHd79Q="/>-->
+    <add name="datalock" connectionString="Endpoint=sb://chainedfunctionservicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=tsIO0ADA5ZPOX7mRsSpy70Kc/1pyPbiAbh8k9LRH6bY="/>
   </connectionStrings>
 </configuration>
